--- a/humpsub-website/css/stylish-portfolio.css
+++ b/humpsub-website/css/stylish-portfolio.css
@@ -6,6 +6,8 @@
 
 /* Custom Styles */
 
+/* Style the buttons that are used to open and close the accordion panel */
+
 .standout-text-dark {
     color: white;
     text-shadow: 2px 4px 3px rgba(0,0,0,0.3);
