--- a/humpsub-website/css/stylish-portfolio.css
+++ b/humpsub-website/css/stylish-portfolio.css
@@ -18,7 +18,7 @@
 
 .standout-text-dark {
     color: white;
-    text-shadow: 2px 4px 3px rgba(0,0,0,0.3);
+    text-shadow: 3px 5px 4px rgba(0,0,0,0.6);
     margin-top: 5px;
     margin-bottom: 5px;
     font-family: Raleway;
@@ -65,6 +65,8 @@
     width: 20vw;
     font-size: 30px;
     display: inline-block;
+    /*margin: 10px;
+    background-color: rgba(0, 0, 0, 0.3);;*/
 }
 
 .roster-subsection:hover {
